--- a/dex.yaml
+++ b/dex.yaml
@@ -58,6 +58,7 @@ staticClients:
   name: 'Example App'
   secret: ZXhhbXBsZS1hcHAtc2VjcmV0
 
+# Portier requires [ "id_token" ] scope.
 connectors:
 - type: oidc
   id: oidc
@@ -67,6 +68,19 @@ connectors:
     clientID: http://127.0.0.1:5556
     redirectURI: http://127.0.0.1:5556/dex/callback
     scopes: [ "id_token" ]
+    responseType: id_token
+
+# NOTE: Okta seems to require the "openid" scope.
+#       It does not work with [ "openid" "id_token" ] (okta complains custom scopes are not allowed)
+#       I'm not sure, Portier or Okta may be wrong here in what they expect/tolerate or maybe it's just the luck of OIDC.
+- type: oidc
+  id: okta
+  name: Okta
+  config:
+    issuer: https://dev-444874.oktapreview.com
+    clientID: 0oajetuj4l9I3fjZK0h7
+    redirectURI: http://127.0.0.1:5556/dex/callback
+    scopes: [ "openid" ]
     responseType: id_token
 
 # Let dex keep a list of passwords which can be used to login to dex.
